--- a/client/pages/demo/demo.wxml
+++ b/client/pages/demo/demo.wxml
@@ -1,5 +1,2 @@
 <!--pages/demo.wxml-->
-<text>pages/demo.wxml</text>
-<block wx:for="{{items}}" wx:for-item="item" wx:key="index">
-<view>{{index}}:{{item.name}}</view>
-</block>
+<canvas canvas-id="firstCanvas" id="firstCanvas"></canvas>
