--- a/client/pages/index/index.wxml
+++ b/client/pages/index/index.wxml
@@ -16,7 +16,7 @@
 
     <!-- 上传图片测试 -->
     <view class="uploader">
-        <view class="uploader-text" bindtap="doUpload">
+        <view class="uploader-text" bindtap="doRequest">
             <text>上传图片</text>
         </view>
         <view class="uploader-container" wx:if="{{imgUrl}}">
