--- a/client/pages/demo/demo.wxss
+++ b/client/pages/demo/demo.wxss
@@ -1,5 +1,8 @@
-/* pages/demo.wxss */
-#firstCanvas {
+/* pages/demo.wxss  
+  background-color: #f5f5f9;*/
+.container {
   height: 100vh;
   width: 100vw;
+  background: url("https://lg-flxo7qlo-1256588190.cos.ap-shanghai.myqcloud.com/11.png") center center no-repeat ;
+  background-size: cover;
 }
