--- a/client/app.wxss
+++ b/client/app.wxss
@@ -1,7 +1,24 @@
 /**app.wxss**/
+page {
+  height: 100%;
+}
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
 } 
+
+.hover-class {
+  opacity: 0.8;
+}
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: linear-gradient(135deg, #FFFFFF 0%, #EEEEEE 100%);
+}
