--- a/client/pages/home/home.wxml
+++ b/client/pages/home/home.wxml
@@ -64,6 +64,5 @@
       </view>
     </view>
   </block>
-  <image src='../../assets/add.svg'  class='add-story' bindtap='goToAddpaeg'></image>
-  <button class="userinfo-nickname" open-type="getUserInfo" bindgetuserinfo="goToAddpaeg">点击测试登录接口</button>
+  <button class="add-story" open-type="getUserInfo" bindgetuserinfo="goToAddpaeg"></button>
 </scroll-view>
