--- a/client/pages/setting/setting.wxml
+++ b/client/pages/setting/setting.wxml
@@ -21,10 +21,10 @@
 <view class='container' style='padding-top: {{STATUSBAR_HEIGHT+44}}px;'>
   <!--logo  -->
   <view class='header'>
-    <text>复杂的世界里，一个就够了</text>
+    <text>一首歌，一段故事</text>
   </view>
   <view class='separator' />
   <view class='body'>
-    <text>本小程序数据来源于网络开放API接口。如涉及侵权，请及时联系本人。\n代码以及UI素材都已全部进行开源，欢迎您的研究参与与探讨学习！</text>
+    <text>如涉及侵权，请及时联系本人！</text>
   </view>
 </view>
