--- a/client/pages/home/home.wxss
+++ b/client/pages/home/home.wxss
@@ -157,8 +157,11 @@
 
 .add-story {
   position: fixed;
-  right: 40rpx;
+  z-index:100000;
+  right: 10rpx;
   bottom: 40rpx;
   height: 60rpx;
   width: 60rpx; 
+  background-color: rgb(122, 72, 25);
+  opacity: 0.7;
 }
