--- a/client/pages/setting/setting.wxml
+++ b/client/pages/setting/setting.wxml
@@ -25,6 +25,6 @@
   </view>
   <view class='separator' />
   <view class='body'>
-    <text>如涉及侵权，请及时联系本人！</text>
+    <text>最初的版本，功能极其简单</text>
   </view>
 </view>
